# stc

./: .gitignore  Cargo.toml  README.md  go.mod
.github/workflows/: push.yaml
cmd/stacker/: main.go
internal/command/: clean.go  create.go  delete.go  fix.go  init.go  publish.go  push.go  rebase.go  root.go  show.go  start.go  sync.go
internal/fakegit/: fakegit.go
internal/git/: git.go  git_test.go  realgit.go  ref.go  ref_test.go  repo.go  repo_test.go  runner.go  shell.go  shell_test.go  types.go
internal/git/fakegit/: fakegit.go
internal/git/realgit/: realgit.go
internal/stacker/: operation.go  stacker.go  stacker_test.go  utils.go
internal/stacker/command/: init.go  root.go  stacker.go
src/: git.rs  main.rs  runner.rs  stc.rs
tests/: integration_test.rs
