[package]
name = "stc"
description = "[WIP] Easy stacking of dev branches in git repositories."
version = "0.1.2"
authors = ["Folke Behrens <folke@gmail.com>"]
edition = "2021"
repository = "https://github.com/cloneable/stc/"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git"]
exclude = [".gitignore", ".github", "target"]

[dependencies]
anyhow = "1.0.57"
const_format = "0.2.24"
serde = { version = "1.0.137", features = ["derive"] }
csv = "1.1.6"
thiserror = "1.0.31"

[dependencies.clap]
version = "3.1.18"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
phf = { version = "0.10.1", features = ["macros"] }
predicates = "2.1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
