[package]
name = "stc"
description = "[WIP] Easy stacking of dev branches in git repositories."
version = "0.2.2"
authors = ["Folke Behrens <folke@gmail.com>"]
edition = "2021"
repository = "https://github.com/cloneable/stc/"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git"]
exclude = [".gitignore", ".github", "target"]

[dependencies]
anyhow = "1"
const_format = "0.2"
serde = { version = "1", features = ["derive"] }
csv = "1"
thiserror = "1"

[dependencies.clap]
version = "3"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
phf = { version = "0.11", features = ["macros"] }
predicates = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = 1
strip = "none"
