[package]
name = "stc"
description = "[WIP] Easy stacking of dev branches in git repositories."
version = "0.3.0"
authors = ["Folke B <folke@gmail.com>"]
edition = "2021"
repository = "https://github.com/cloneable/stc"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git"]
exclude = [".gitignore", ".github", "target"]

[dependencies]
color-eyre = "0.6"
const_format = "0.2"
csv = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dependencies.clap]
version = "4"
default-features = false
features = ["std", "derive", "help", "usage", "suggestions"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
phf = { version = "0.11", features = ["macros"] }
predicates = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
